# llm-political-alignment-ca-es

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.ca.md  README.md  config.yaml  models.yaml  pyproject.toml
data/: ceo_items.csv  cis_items.csv  schema.md  translation_check.csv
docs/: measuring-cross-lingual-shift.ca.md  measuring-cross-lingual-shift.md  references.md
paper/: paper.tex  paper_data.tex  table_models.tex
political_alignment/: __init__.py  batch.py  dataset.py  framings.py  metrics.py  providers.py  survey_alignment.py
scripts/: build_dataset.py  directional.py  model.py  paper_figures.py  run_batch.py  run_evals.py  summarize_results.py  upload_hf.py  validate_translations.py
templates/: table_template.jinja
tests/: test_batch.py  test_dataset_framings.py  test_metrics.py  test_survey_alignment_mock.py
