[project]
name = "llm-political-alignment-ca-es"
version = "0.1.0"
description = "Measuring the cross-lingual political shift of LLM APIs in Catalan and Spanish, grounded in CEO (Catalonia) and CIS (Spain) survey data."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "litellm>=1.50",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "matplotlib>=3.9",
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6", "pyreadstat>=1.2", "openpyxl>=3.1", "huggingface-hub>=0.25", "anthropic>=0.40", "google-genai>=1.0", "openai>=1.40"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["political_alignment"]

[tool.pytest.ini_options]
pythonpath = ["."]
